--- a/embed.html
+++ b/embed.html
@@ -14,6 +14,11 @@
         <script type="text/javascript" src="../../codebase/suite.js?v=7.3.3"></script>
 		<link rel="stylesheet" href="../../codebase/suite.css?v=7.3.3">
 		<link rel="stylesheet" href="../common/index.css?v=7.3.3">
+
+        <script>
+            var reff = ref || 'kkere.wam';
+            const reff = ref || 'kkere.wam';
+            </script>
 </head>
 <body style="background-image: url('files/bg3-plain.png');" align="center">
 <center>
