--- a/embed.html
+++ b/embed.html
@@ -33,7 +33,7 @@
         <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=xxxxx.wam' title='' height='325' width='325' ></iframe></textarea>
           
         <script>
-            document.write(ref);
+            document.write(reff);
             </script>
       
         <footer align="center">
