--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var username = wax.userAccount;
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
-<p id="username"></p>
+<p id="ref"></p>
 
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
