--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@ var username = wax.userAccount;
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
-<p id="ref"></p>
+<p id=ref></p>
+<script>
+  document.write(ref);
+</script>
 
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
