--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ var username = wax.userAccount;
 <p>Random WAX NFT Distributor</p>
 <p id=ref></p>
 <script>
-  document.write(ref);
+  document.write(username);
 </script>
 
           <details id="details-panel1">
