--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ var ref = url.searchParams.get("ref") || 'kkere.wam';
 const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 </script>
 <script>
-var username = wax.userAccount;
+var username = wax.userAccount || 'xxx';
 </script>
 
 </head>
