--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@ var url = new URL(url_string);
 var ref = url.searchParams.get("ref") || 'kkere.wam';
 const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 </script>
+
 <script>
-var username = wax.userAccount || 'xxx';
+const username = wax.userAccount || 'xxx';
 </script>
 
 </head>
