--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ const username = wax.userAccount || 'xxx';
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
-<p id=ref></p>
+<p id="username"></p>
 <script>
   document.write(username);
 </script>
