--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 </script>
 
 <script>
-const username = wax.userAccount || 'xxx';
+const username2 = current || 'xxx';
 </script>
 
 </head>
@@ -43,9 +43,9 @@ const username = wax.userAccount || 'xxx';
     <div id="container">
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
-<p id="username"></p>
+<p id="username2"></p>
 <script>
-  document.write(username);
+  document.write(username2);
 </script>
 
           <details id="details-panel1">
