--- a/referral.html
+++ b/referral.html
@@ -33,6 +33,7 @@ var ref = url.searchParams.get("ref") || 'kkere.wam';
 const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 </script>
 
+
 </head>
 <body style="background-image: url('files/bg3-plain-4.png');" align="center">
 <center>
@@ -52,6 +53,13 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <h2 id="current"></h2><h2 id="current2"></h2></p>
             <br>
             <p>iframe</p>
+            <script>
+              document.write('<p><textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=');
+              document.write(ref);
+              document.write('' title='' height='325' width='325' >');
+              document.write('</iframe></textarea></p>');
+              </script>
+
             <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=xxxxx.wam' title='' height='325' width='325' ></iframe></textarea>
          
             <br>
