--- a/referral.html
+++ b/referral.html
@@ -55,12 +55,14 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p>iframe</p>
             <script>
               document.write('<p><textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=');
-              document.write(ref);
+              document.write(wallet);
               document.write('' title='' height='325' width='325' >');
               document.write('</iframe></textarea></p>');
               </script>
 
-            <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=xxxxx.wam' title='' height='325' width='325' ></iframe></textarea>
+              <script>document.write(wallet);</script>
+
+            <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=${wallet}' title='' height='325' width='325' ></iframe></textarea>
          
             <br>
             <img src="files/waxrush-nft.gif" alt="NFT Distributor" width="20%">
