--- a/referral.html
+++ b/referral.html
@@ -50,9 +50,10 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                 streaming profil like Twitch and earn 5% of all WAX spended by users playing from there. 
               </p><br>
             <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%"><br>
-            <h2 id="current"></h2><h2 id="current2"></h2></p>
+            <h2 id="current"></h2></p>
             <br>
             <p>iframe</p>
+            <p id="current2"></p>
             <script>
               document.write('<p><textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=');
               document.write(wallet);
