--- a/referral.html
+++ b/referral.html
@@ -54,7 +54,9 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <br>
             <p>iframe</p>
             <br>
-            <p id="current"></p>
+
+            <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><p id="current"></textarea>
+            </p>
 
             <script>
               document.write('<p><textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=');
