--- a/referral.html
+++ b/referral.html
@@ -55,8 +55,8 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p>iframe</p>
             <br>
 
-            <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><p id="current"></textarea>
-            </p>
+            <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><p id="current"></p></textarea>
+            
 
             <script>
               document.write('<p><textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=');
