--- a/referral.html
+++ b/referral.html
@@ -52,7 +52,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%"><br>
             <h2 id="current2"></h2></p>
             <br>
-            <p>iframe</p>
+            <p>Login to generate your iframe</p>
             <br>
             <p id="current"></p>
             
