--- a/referral.html
+++ b/referral.html
@@ -151,7 +151,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                         const message = res.rows[0] ? res.rows[0].message : `<iframe src="https://waxrush.com/?ref=${wax.userAccount}" height="325" width="325" ></iframe>`;
                         document.getElementById('current').textContent = message;
                         document.getElementById('current2').textContent = wax.userAccount;
-                        document.getElementById('current3').textContent = 'xxx';
+                        document.getElementById('current3').textContent = `xxx`;
                                                 
 
                         //document.getElementById('current2').append = `current2`;
