--- a/referral.html
+++ b/referral.html
@@ -61,6 +61,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <br>
             <p id="current3"></p>
             <p id="current"></p>
+            <p id="current5"></p>
             <p id="current4"></p>
 
                     
@@ -141,6 +142,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                         document.getElementById('current2').textContent = wax.userAccount;
                         document.getElementById('current3').textContent = `// waxrush code start`;
                         document.getElementById('current4').textContent = `// waxrush code end`;
+                        document.getElementById('current5').textContent = `<hr>`;
                                                 
 
                         //document.getElementById('current2').append = `current2`;
