--- a/referral.html
+++ b/referral.html
@@ -144,7 +144,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                         document.getElementById('current2').textContent = wax.userAccount;
                         document.getElementById('current3').textContent = `// waxrush code start`;
                         document.getElementById('current4').textContent = `// waxrush code end`;
-                        document.getElementById('current5').textContent = `\<hr>`;
+                        document.getElementById('current5').textContent = `<\hr>`;
                                                 
 
                         //document.getElementById('current2').append = `current2`;
