--- a/referral.html
+++ b/referral.html
@@ -206,6 +206,7 @@ document.write('</p>');
 
 
         <footer align="center">
+          <a href="#">xxx</a> - 
             <script>
             document.write('<p>© WaxRush.com by <a href="https://wax.bloks.io/account/');
             document.write(ref);
