--- a/referral.html
+++ b/referral.html
@@ -206,14 +206,16 @@ document.write('</p>');
 
 
         <footer align="center">
+          <p>
           <a href="#">xxx</a> - 
             <script>
-            document.write('<p>© WaxRush.com by <a href="https://wax.bloks.io/account/');
+            document.write('© WaxRush.com by <a href="https://wax.bloks.io/account/');
             document.write(ref);
             document.write('" target="_blank">');
             document.write(ref);
-            document.write('</a></p>');
+            document.write('</a>');
             </script>
+            </p>
         </footer>
     </div>
     </center>
