--- a/referral.html
+++ b/referral.html
@@ -208,8 +208,10 @@ document.write('</p>');
         <footer align="center">
           <p>
           <a href="#">xxx</a> - 
+          <br>
+          © WaxRush.com by 
             <script>
-            document.write('© WaxRush.com by <a href="https://wax.bloks.io/account/');
+            document.write('<a href="https://wax.bloks.io/account/');
             document.write(ref);
             document.write('" target="_blank">');
             document.write(ref);
