--- a/referral.html
+++ b/referral.html
@@ -206,8 +206,14 @@ document.write('</p>');
 
 
         <footer align="center">
-          <p>
-          <a href="#">xxx</a> - 
+          <p> 
+          <script>
+            document.write('<a href="referral.html?ref=');
+            document.write(ref);
+            document.write('">Embed this tool$</a>');
+            </script> - 
+            
+          
           <br>
           © WaxRush.com by 
             <script>
