--- a/referral.html
+++ b/referral.html
@@ -160,17 +160,29 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             </section>
         </details>
         <br><br>
-        <a href="referral.html?ref=">Embed this toll$</a> - 
+        <a href="referral.html">Home</a> - 
           
         <script>
-          document.write('<a href="referral.html?ref=');
+          document.write('<a href="index.html?ref=');
           document.write(ref);
-          document.write('">Embed this tool$</a>');
-          </script>
+          document.write('">Home</a>');
+          </script> - 
+          <script>
+            document.write('<a href="referral.html?ref=');
+            document.write(ref);
+            document.write('">Embed this tool$</a>');
+            </script> - 
+          <script>
+            document.write('<a href="https://waxaffiliation.io/?ref=');
+            document.write(ref);
+            document.write('">More tool$</a>');
+            </script>
+
+
           <br><br>
 
 <!--
-  
+
 <p id="show">Embed this tool$</p>
 <script>
     const popup = new dhx.Popup({
