--- a/referral.html
+++ b/referral.html
@@ -173,7 +173,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
           <script>
             document.write('<a href="https://waxaffiliation.io/?ref=');
             document.write(ref);
-            document.write('">More tool$</a>');
+            document.write('" target="_blank">More tool$</a>');
             </script>
           <br><br>
 
