--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 
                     <img src="files/waxrush-nft.gif" alt="NFT Distributor" width="40%">
                     <br>
-                    Random NFT distributor (1 WAX)
+                    Random NFT distributor (1 WAX or X RMX)
 
                     <label hidden="hidden">wallet:</label><input id="wallet" hidden="hidden"><br><br>
 
