--- a/referral.html
+++ b/referral.html
@@ -47,7 +47,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <section id="main">
               <p>
                 Embed the distributor in your website/dApp or your 
-                streaming profil like Twitch and earn 5% of all WAX spended by users playing from there. 
+                streaming profil like Twitch and earn 5% of all WAX/RMX spended by users playing from there. 
                 <br><br>
                 <strong>See the result</strong>
               </p>
