--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
           <script>
             document.write('<a href="referral.html?ref=');
             document.write(ref);
-            document.write('">Embed this tool$</a>');
+            document.write('" target="_blank">Embed this tool$</a>');
             </script>
           <br><br>
 
