--- a/referral.html
+++ b/referral.html
@@ -161,7 +161,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
         </details>
         <br><br> 
         <script>
-          document.write('<a href="index.html?ref=');
+          document.write('<a href="/?ref=');
           document.write(ref);
           document.write('">Home</a>');
           </script> - 
