--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ document.write('</p>');
 
         <footer align="center">
             <script>
-            document.write('<p>© WaxRush.com by <a href="https://wax.bloks.io/account/');
+            document.write('<p>© WaxRush.com referred by <a href="https://wax.bloks.io/account/');
             document.write(ref);
             document.write('" target="_blank">');
             document.write(ref);
