--- a/referral.html
+++ b/referral.html
@@ -49,7 +49,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                 Embed the distributor in your website/dApp or your 
                 streaming profil like Twitch and earn 5% of all WAX/RMX spended by users playing from there. 
                 <br><br>
-                <strong>See the result</strong>
+                <strong>See an example of the result</strong>
               </p>
 
             <iframe src="https://waxrush.com/?ref=xxxxx.wam" height="325" width="325" ></iframe>
