--- a/referral.html
+++ b/referral.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0">
-    <title>Waxrush.com - Random WAX NFT Distributor</title>
+    <title>Waxrush.com - Embed - <script>document.write(ref);</script></title>
     <link rel="preload" href="files/Site.min.css" as="style">
     <link rel="reload" href="files/style.min.css" as="style">
         <link rel="preload" href="files/sso-theme.min.css" as="style">
