--- a/referral.html
+++ b/referral.html
@@ -62,7 +62,8 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p id="current3"></p>
             <p id="current"></p>
             <p id="current4"></p>
-
+            <hr>
+            <img id="sign" onclick=sign() src="files/insertyourcoin.png" alt="NFT Distributor" width="50%">
                     
                     <label hidden="hidden">wallet:</label><input id="wallet" hidden="hidden">
 
