--- a/referral.html
+++ b/referral.html
@@ -65,7 +65,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <hr><br><br>
             <img id="sign" onclick=sign() src="files/insertyourcoin.png" alt="NFT Distributor" width="50%">
             <br><br>
-            xxxx
+            <p>2 - sign this contract to register in the affiliate database (smart contract) and generate your iframe code embedded</p>>
             <br><br>
             <h2 id="response"></h2>
 
