--- a/referral.html
+++ b/referral.html
@@ -63,10 +63,11 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p id="current"></p>
             <p id="current4"></p>
             <hr><br><br>
+            <p>2 - sign this contract to register in the affiliate database (smart contract) and generate your iframe code embedded</p>
+            <br><br>
             <img id="sign" onclick=sign() src="files/insertyourcoin.png" alt="NFT Distributor" width="50%">
             <br><br>
-            <p>2 - sign this contract to register in the affiliate database (smart contract) and generate your iframe code embedded</p>>
-            <br><br>
+
             <h2 id="response"></h2>
 
 
