--- a/referral.html
+++ b/referral.html
@@ -62,8 +62,8 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p id="current3"></p>
             <p id="current"></p>
             <p id="current4"></p>
-            <hr><br><br>
-            <p>2 - sign this contract to register in the affiliate database (smart contract) and generate your iframe code embedded</p>
+            <br><hr><br>
+            <p>2 - Sign this contract to register in the affiliate database (smart contract) and generate your iframe code embedded</p>
             <br><br>
             <img id="sign" onclick=sign() src="files/insertyourcoin.png" alt="NFT Distributor" width="50%">
             <br><br>
