--- a/referral.html
+++ b/referral.html
@@ -54,7 +54,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 
             <iframe src="https://waxrush.com/?ref=xxxxx.wam" height="325" width="325" ></iframe>
             <br><br>
-            <p>1 - Login with your WAX wallet</p>
+            <p>1 - Login with your WAX wallet.</p>
             <br>
             <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%"><br>
             <h2 id="current2"></h2></p>
@@ -63,9 +63,9 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p id="current"></p>
             <p id="current4"></p>
             <br><hr><br>
-            <p>2 - Sign this contract to register in the affiliate database (smart contract) and generate your iframe code embedded</p>
-            <br><br>
-            <img id="sign" onclick=sign() src="files/insertyourcoin.png" alt="NFT Distributor" width="50%">
+            <p>2 - Sign this contract to register in the affiliate database (smart contract) and generate your html iframe code to use.</p>
+            <br>
+            <img id="sign" onclick=sign() src="files/signup.png" alt="NFT Distributor" width="50%">
             <br><br>
 
             <h2 id="response"></h2>
