--- a/referral.html
+++ b/referral.html
@@ -68,7 +68,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <h2 id="response2"></h2>
             <br>
             <h2 id="response3"></h2>
-            <h2 id="response"></h2>
+            <h2 id="response"></h2><br>
             <h2 id="response4"></h2>
             <h2 id="response5"></h2>
             <h2 id="response6"></h2>
@@ -123,9 +123,9 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                             expireSeconds: 30
                           });
                           document.getElementById('response2').append('You are register, Welcome :)');
-                          document.getElementById('response3').append('Your affiliate direct link');
+                          document.getElementById('response3').append('Your affiliate direct link:');
                           document.getElementById('response').append(`https://waxrush.com/?ref=${wax.userAccount}`);
-                          document.getElementById('response4').append('Your iframe with affiliate link');
+                          document.getElementById('response4').append('Your iframe with affiliate link:');
                           
 
                           document.getElementById('response5').append('<!-- waxrush html code start -->');
