--- a/referral.html
+++ b/referral.html
@@ -68,10 +68,10 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <h2 id="response2"></h2>
             <br>
             <h2 id="response3"></h2>
-            <h2 id="response"></h2><br>
+            <p id="response"></p><br>
             <h2 id="response4"></h2>
             <h2 id="response5"></h2>
-            <h2 id="response6"></h2>
+            <p id="response6"></p>
             <h2 id="response7"></h2>
 
 
