--- a/referral.html
+++ b/referral.html
@@ -123,9 +123,9 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                             expireSeconds: 30
                           });
                           document.getElementById('response2').append('You are register, Welcome :)');
-                          document.getElementById('response3').append('Your affiliate direct link:');
+                          document.getElementById('response3').append('Direct link:');
                           document.getElementById('response').append(`https://waxrush.com/?ref=${wax.userAccount}`);
-                          document.getElementById('response4').append('Your iframe with affiliate link:');
+                          document.getElementById('response4').append('iFrame:');
                           
 
                           document.getElementById('response5').append('<!-- waxrush html code start -->');
