--- a/referral.html
+++ b/referral.html
@@ -70,9 +70,9 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <h2 id="response3"></h2>
             <p id="response"></p><br>
             <h2 id="response4"></h2>
-            <h2 id="response5"></h2>
+            <p id="response5"></p>
             <p id="response6"></p>
-            <h2 id="response7"></h2>
+            <p id="response7"></p>
 
 
 
