--- a/referral.html
+++ b/referral.html
@@ -73,6 +73,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <p id="response5"></p>
             <p id="response6"></p>
             <p id="response7"></p>
+            <p>xxx</p>
 
 
 
