--- a/referral.html
+++ b/referral.html
@@ -191,15 +191,15 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             </script>
           <br><br>
 
-<!--
 
-<p id="show">Embed this tool$</p>
+
+<p id="show">Leaderboard</p>
 <script>
     const popup = new dhx.Popup({
 css: "dhx_widget--bordered"
 });
 
-    popup.attachHTML("<div style='padding: 0px; text-align: center'> <iframe src='embed.html' title='' height='335' width='335' ></iframe></div>");
+    popup.attachHTML("<div style='padding: 0px; text-align: center'> <iframe src='https://wax-ranking.vercel.app/' title='' height='450' width='335' ></iframe></div>");
 document.querySelector("#show").addEventListener("click", function () {
 popup.show("show");
     });
@@ -220,9 +220,9 @@ dhxWindow.attach(list)
 dhxWindow.show();
 </script>
 
-<br><br>
 
 
+<!--
 <script>
   var affiliatewallet = "affili.wam";
   document.write('<p>');
