--- a/referral.html
+++ b/referral.html
@@ -45,7 +45,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <summary>WAX LOGIN<br><img src="files/wax.svg" alt="WAX Login" width="50px" height="50px"></summary>
 
             <section id="main">
-              <p>
+              <p align="center">
                 Embed the distributor in your website/dApp or your 
                 streaming profil like Twitch and earn 5% of all WAX/RMX spended by users playing from there. 
                 <br><br>
