--- a/referral.html
+++ b/referral.html
@@ -45,13 +45,16 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <summary>WAX LOGIN<br><img src="files/wax.svg" alt="WAX Login" width="50px" height="50px"></summary>
 
             <section id="main">
-              <p align="center">
+              <div align="center">
+                <p>
                 Embed the distributor in your website/dApp or your 
                 streaming profil like Twitch and earn 5% of all WAX/RMX spended by users playing from there. 
                 <br><br>
                 <strong>See an example of the result</strong>
             <iframe src="https://waxrush.com/?ref=xxxxx.wam" height="325" width="325" ></iframe>
             </p>
+              </div>
+              
             <br><br>
             <p>1 - Login with your WAX wallet.</p>
             <br>
