--- a/referral.html
+++ b/referral.html
@@ -51,7 +51,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
                 streaming profil like Twitch and earn 5% of all WAX/RMX spended by users playing from there. 
                 <br><br>
                 <strong>See an example of the result</strong>
-            <iframe src="https://waxrush.com/?ref=xxxxx.wam" height="100%" width="325" ></iframe>
+            <iframe src="https://waxrush.com/?ref=xxxxx.wam" height="325" width="100%" ></iframe>
             </p>
               </div>
               
