--- a/referral.html
+++ b/referral.html
@@ -41,12 +41,11 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 <img src="files/waxrush.png" alt="NFT Distributor" width="20%"><br>
 <p>Random WAX NFT Distributor</p>
 
-          <details id="details-panel1">
-            <summary>WAX LOGIN<br><img src="files/wax.svg" alt="WAX Login" width="50px" height="50px"></summary>
-
             <section id="main">
               <div align="center">
                 <p>
+                  <img src="files/wax.svg" alt="WAX Login" width="50px" height="50px">
+                  <br>
                 Embed the distributor in your website/dApp or your 
                 streaming profil like Twitch and earn 5% of all WAX/RMX spended by users playing from there. 
                 <br><br>
@@ -179,7 +178,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 
             </p>
             </section>
-        </details>
+        
         <br><br> 
         <script>
           document.write('<a href="/?ref=');
