--- a/referral.html
+++ b/referral.html
@@ -61,7 +61,8 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <h2 id="current"></h2>
        
             <br><hr><br>
-            <p>2 - Sign this contract to register in the affiliate database (smart contract) and generate your html iframe code to use.</p>
+            <p>2 - Sign this contract to register in the affiliate database (</p><p id="show">Smart Contract</p><p> - <a href="https://wax.bloks.io/account/freecitygamx?loadContract=true&tab=Tables&account=freecitygamx" target="_blank">smart contract</a>) and generate your html iframe code to use.
+          </p>
             <br>
             <img id="sign" onclick=sign() src="files/signup.png" alt="NFT Distributor" width="50%">
             <br><br>
@@ -192,8 +193,8 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
           <br><br>
 
 
-<!--
-<p id="show">Leaderboard</p>
+
+
 <script>
     const popup = new dhx.Popup({
 css: "dhx_widget--bordered"
@@ -220,7 +221,7 @@ dhxWindow.attach(list)
 dhxWindow.show();
 </script>
 
-
+<!--
 -->
         <footer align="center">
           <p>
