--- a/referral.html
+++ b/referral.html
@@ -200,7 +200,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 css: "dhx_widget--bordered"
 });
 
-    popup.attachHTML("<div style='padding: 0px; text-align: center'> <iframe src='https://wax-ranking.vercel.app/' title='' height='450' width='335' ></iframe></div>");
+    popup.attachHTML("<div style='padding: 0px; text-align: center'> <iframe src='https://wax.bloks.io/account/freecitygamx?loadContract=true&tab=Tables&account=freecitygamx' title='' height='450' width='335' ></iframe></div>");
 document.querySelector("#show").addEventListener("click", function () {
 popup.show("show");
     });
