--- a/referral.html
+++ b/referral.html
@@ -61,7 +61,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <h2 id="current"></h2>
        
             <br><hr><br>
-            <p>2 - Sign this contract to register in the affiliate database (<a href="https://wax.bloks.io/account/waxrushrush1?loadContract=true&tab=Tables&account=waxrushrush1" target="_blank">smart contract</a>) and generate your html iframe code to use.
+            <p>2 - Sign this contract to register in the affiliate database (<a href="https://wax.bloks.io/account/freecitygamx?loadContract=true&tab=Tables&account=freecitygamx" target="_blank">smart contract</a>) and generate your html iframe code to use.
           </p>
             <br>
             <img id="sign" onclick=sign() src="files/signup.png" alt="NFT Distributor" width="50%">
