--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0">
 
-    <title>WaxAffiliation.io</title>
+    <title>WaxAffiliation.ioo</title>
 
     <link rel="preload" href="files/Site.min.css" as="style">
     <link rel="reload" href="files/style.min.css" as="style">
