--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 
             <section id="main">
             <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%"><br>
-            <h2 id="current"></h2><h2 id="current2"></h2></p>
+            <h2 id="current"></h2></p>
 
                     <img src="files/waxrush-nft.gif" alt="NFT Distributor" width="40%">
                     <br>
