--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
 <p>Random WAX NFT Distributor</p>
 
           <details id="details-panel1">
-            <summary>WAX LOGIN<br><img src="files/wax.svg" alt="WAX Login" width="50px" height="50px"></summary>
+            <summary>WAX LOGIN<br><img src="files/wax.svg" alt="WAX" width="50px" height="50px"></summary>
 
             <section id="main">
             <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%"><br>
