--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0">
-    <title>Waxrush.com -- Random WAX NFT Distributor</title>
+    <title>Waxrush.com - Random WAX NFT Distributor</title>
     <link rel="preload" href="files/Site.min.css" as="style">
     <link rel="reload" href="files/style.min.css" as="style">
         <link rel="preload" href="files/sso-theme.min.css" as="style">
@@ -29,8 +29,8 @@
 <script>
 var url_string = window.location.href;
 var url = new URL(url_string);
-var ref = url.searchParams.get("ref") || 'kkere.wam';
-const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
+var ref = url.searchParams.get("ref") || 'waxrushrush1';
+const affiliate_wallet = url.searchParams.get("ref") || 'waxrushrush1';
 </script>
 
 </head>
@@ -44,8 +44,9 @@ const affiliate_wallet = url.searchParams.get("ref") || 'kkere.wam';
             <summary>WAX LOGIN<br><img src="files/wax.svg" alt="WAX" width="50px" height="50px"></summary>
 
             <section id="main">
-            <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%"><br>
-            <h2 id="current"></h2></p>
+            <p><img id="login" onclick=login() src="files/login.png" alt="NFT Distributor" width="30%">
+              <br>
+            <h2 id="current"></h2>
 
                     <img src="files/waxrush-nft.gif" alt="NFT Distributor" width="40%">
                     <br>
