--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ const affiliate_wallet = url.searchParams.get("ref") || 'waxrushrush1';
 
                     <img src="files/waxrush-nft.gif" alt="NFT Distributor" width="40%">
                     <br>
+                    <p style="color:red">dApp in construction, dont use this smart contract now</p>
                     Random NFT distributor (1 WAX or X RMX)
 
                     <label hidden="hidden">wallet:</label><input id="wallet" hidden="hidden"><br><br>
